--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,12 @@ jobs:
         run: npm run build
 
       # Step 5: Install Cloud Foundry CLI
-      - name: Install CF CLI
+      - name: Install Cloud Foundry CLI
         run: |
-          wget -q -O - "https://packages.cloudfoundry.org/stable?release=linux64-binary&source=github" | tar -zx
-          sudo mv cf /usr/local/bin
+          wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
+          echo "deb https://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
+          sudo apt-get update
+          sudo apt-get install cf-cli -y
 
       # Step 6: Login to Cloud Foundry
       - name: CF Login
